--- a/roles/sysinit/tasks/tools/thinkfan.yml
+++ b/roles/sysinit/tasks/tools/thinkfan.yml
@@ -3,25 +3,28 @@
   block:
     - name: Configure modprobe
       ansible.builtin.lineinfile:
-        path:  /etc/modprobe.d/thinkfan.conf
+        path: /etc/modprobe.d/thinkfan.conf
         state: present
         line: 'options thinkpad_acpi fan_control=1'
-        create: yes
-        
+        create: true
+        mode: "0644"
+
     - name: Configure default thinkfan
       ansible.builtin.lineinfile:
-        path:  /etc/default/thinkfan
+        path: /etc/default/thinkfan
         state: present
         line: 'START=yes'
-        create: yes
-        
+        create: true
+        mode: "0644"
+
     - name: Configure thinkfan
       ansible.builtin.copy:
-        src:  "{{ role_path }}/files/thinkfan.conf"
+        src: "{{ role_path }}/files/thinkfan.conf"
         dest: /etc/thinkfan.conf
-    
+        mode: "0644"
+
     - name: Start service and enable
       ansible.builtin.service:
         name: thinkfan
         state: started
-        enabled: yes
+        enabled: true
