--- a/playbook.yml
+++ b/playbook.yml
@@ -5,6 +5,6 @@
   gather_facts: true
   vars:
     upgrade: true
-    github_token:
+    github_token: "{{ vault_github_token | default('') }}"
   roles:
     - sysinit
