--- a/roles/sysinit/tasks/tools/aws-ssm.yml
+++ b/roles/sysinit/tasks/tools/aws-ssm.yml
@@ -2,9 +2,9 @@
 - name: AWS - SSM - Exists
   ansible.builtin.stat:
     path: /usr/local/bin/sessionmanagerplugin
-  register: awsssm_exists_result
+  register: sysinit_awsssm_exists_result
 
 - name: AWS - SSM - Install/Upgrade
   ansible.builtin.apt:
     deb: https://s3.amazonaws.com/session-manager-downloads/plugin/latest/ubuntu_64bit/session-manager-plugin.deb
-  when: awsssm_exists_result.stat.exists == false or upgrade == true
+  when: sysinit_awsssm_exists_result.stat.exists == 'false' or upgrade == 'true'
