--- a/roles/sysinit/tasks/tools/docker.yml
+++ b/roles/sysinit/tasks/tools/docker.yml
@@ -4,9 +4,11 @@
     path: /etc/apt/keyrings/docker.gpg
   register: docker_gpg
 
-- name: "Add docker offical GPG key for {{ ansible_distribution }}"
-  ansible.builtin.shell: >
-     curl -fsSL https://download.docker.com/linux/{{ ansible_distribution | lower }}/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg
+- name: "Add docker official GPG key for {{ ansible_distribution }}"
+  ansible.builtin.apt_key:
+    url: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/gpg"
+    state: present
+    keyring: "/etc/apt/keyrings/docker.gpg"
   when: not docker_gpg.stat.exists
 
 - name: Fix keyring permissions
@@ -16,7 +18,10 @@
 
 - name: Add docker repository
   ansible.builtin.apt_repository:
-    repo: "deb [arch=amd64 signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/{{ ansible_distribution | lower }}/ {{ ansible_distribution_release }} stable"
+    repo: >
+      deb [arch=amd64 signed-by=/etc/apt/keyrings/docker.gpg]
+      https://download.docker.com/linux/{{ ansible_distribution | lower }}/
+      {{ ansible_distribution_release }} stable
     state: present
 
 - name: Docker - Install
@@ -42,10 +47,25 @@
   loop_control:
     loop_var: user_item
   loop:
-    - "{{ lookup('env','USER') }}"
-    
+    - "{{ lookup('env', 'USER') }}"
+
 - name: Docker - Install completion
-  ansible.builtin.get_url:
-    url: https://raw.githubusercontent.com/docker/docker-ce/master/components/cli/contrib/completion/bash/docker
-    dest: /etc/bash_completion.d/docker.sh
-    mode: +x
+  block:
+    - name: Docker - Get completion script content for checksum calculation
+      ansible.builtin.uri:
+        url: https://raw.githubusercontent.com/docker/docker-ce/master/components/cli/contrib/completion/bash/docker
+        method: GET
+        return_content: true
+      register: docker_completion_content
+
+    - name: Docker - Calculate checksum of completion script
+      ansible.builtin.set_fact:
+        docker_completion_sha256: "{{ docker_completion_content.content | hash('sha256') }}"
+      when: docker_completion_content is succeeded
+
+    - name: Docker - Download completion script
+      ansible.builtin.get_url:
+        url: https://raw.githubusercontent.com/docker/docker-ce/master/components/cli/contrib/completion/bash/docker
+        dest: /etc/bash_completion.d/docker.sh
+        mode: +x
+        checksum: "{{ 'sha256:' + docker_completion_sha256 if docker_completion_sha256 is defined else omit }}"
