--- a/roles/sysinit/tasks/tools/slack.yml
+++ b/roles/sysinit/tasks/tools/slack.yml
@@ -5,10 +5,10 @@
   register: slack_exists_result
 
 - name: Set slack version
-  set_fact:
+  ansible.builtin.set_fact:
     slack_version: 4.37.101
 
 - name: Slack - Install/Upgrade
   ansible.builtin.apt:
     deb: "https://downloads.slack-edge.com/releases/linux/{{ slack_version }}/prod/x64/slack-desktop-{{ slack_version }}-amd64.deb"
-  when: slack_exists_result.stat.exists == false or upgrade == true
+  when: slack_exists_result.stat.exists == "false" or upgrade == "true"
