--- a/roles/sysinit/tasks/tools/ssm-manager-plugin.yml
+++ b/roles/sysinit/tasks/tools/ssm-manager-plugin.yml
@@ -7,4 +7,4 @@
 - name: SSM Session Manager Plugin - Install/Upgrade
   ansible.builtin.apt:
     deb: https://s3.amazonaws.com/session-manager-downloads/plugin/latest/ubuntu_64bit/session-manager-plugin.deb
-  when: ssm_manager_plugin_result.stat.exists == false or upgrade == true
+  when: ssm_manager_plugin_result.stat.exists == "false" or upgrade == "true"
