--- a/playbook.yml
+++ b/playbook.yml
@@ -6,5 +6,7 @@
   vars:
     upgrade: true
     github_token: "{{ vault_github_token | default('') }}"
+    extra_tools: "{{ (tools | default('') | split(',')) | select('match', '.+') | list }}"
+    combined_tools: "{{ sysinit_tools | default([]) + extra_tools }}"
   roles:
     - sysinit
