--- a/roles/sysinit/tasks/tools/dbeaver.yml
+++ b/roles/sysinit/tasks/tools/dbeaver.yml
@@ -1,10 +1,4 @@
 ---
-- name: Dbeaver - Exists
-  ansible.builtin.stat:
-    path: /usr/bin/dbeaver
-  register: dbeaver_exists_result
-
-- name: Dbeaver - Install/Upgrade
+- name: Dbeaver - Install or upgrade
   ansible.builtin.apt:
     deb: https://dbeaver.io/files/dbeaver-ce_latest_amd64.deb
-  when: dbeaver_exists_result.stat.exists == "false" or upgrade == "true"
