--- a/roles/sysinit/tasks/tools/mise.yml
+++ b/roles/sysinit/tasks/tools/mise.yml
@@ -1,64 +1,84 @@
 ---
-- name: Mise - Exists
+- name: Mise - Set mise path
+  ansible.builtin.set_fact:
+    mise_path: "/home/{{ lookup('env', 'USER') }}/.local/bin"
+
+- name: Mise - Set mise binary
+  ansible.builtin.set_fact:
+    mise_bin: "{{ mise_path }}/mise"
+
+- name: Mise - Check if mise exists
   ansible.builtin.stat:
-    path: "/home/{{ lookup('env', 'USER') }}/.local/bin/mise"
+    path: "{{ mise_bin }}"
   register: mise_exists_result
 
-- name: Mise - Set binary
+- name: Mise - Install
   become: true
   become_user: "{{ lookup('env', 'USER') }}"
-  when: mise_exists_result.stat.exists == "false" or upgrade == "true"
+  when: not mise_exists_result.stat.exists or upgrade | default(false)
   block:
-    - name: Mise - Bin directory exists
+    - name: Mise - Create local bin directory
       ansible.builtin.file:
-        path: "/home/{{ lookup('env', 'USER') }}/.local/bin"
+        path: "{{ mise_path }}"
         state: directory
+        mode: "0755"
+
+    - name: Mise - Import gpg key
+      ansible.builtin.shell: >
+        gpg --keyserver hkps://keyserver.ubuntu.com --recv-keys 0x7413A06D
+      args:
+        creates: "/home/{{ lookup('env', 'USER') }}/.gnupg/pubring.kbx"
+
+    - name: Mise - Download signed install script
+      ansible.builtin.get_url:
+        url: https://mise.jdx.dev/install.sh.sig
+        dest: "/tmp/mise-install.sh.sig"
         mode: "0644"
 
-    - name: Mise - Get current checksum from remote
-      ansible.builtin.uri:
-        url: https://mise.jdx.dev/mise-latest-linux-x64.sha256
-        method: GET
-        return_content: true
-      register: mise_checksum_result
-      ignore_errors: true
+    - name: Mise - Verify and extract install script
+      ansible.builtin.shell: >
+        set -o pipefail &&
+        gpg --decrypt /tmp/mise-install.sh.sig > /tmp/mise-install.sh
+      args:
+        creates: "/tmp/mise-install.sh"
 
-    - name: Mise - Extract checksum
-      ansible.builtin.set_fact:
-        mise_sha256: >
-          "{{ mise_checksum_result.content.split()[0] if mise_checksum_result is succeeded
-          else sysinit_tool_checksums.mise_linux_x64 | regex_replace('^sha256:', '') }}"
+    - name: Mise - Make install script executable
+      ansible.builtin.file:
+        path: "/tmp/mise-install.sh"
+        mode: "0755"
 
-    - name: Mise - Install/Upgrade
-      ansible.builtin.get_url:
-        url: https://mise.jdx.dev/mise-latest-linux-x64
-        dest: "/home/{{ lookup('env', 'USER') }}/.local/bin/mise"
-        mode: +x
-        checksum: "{{ 'sha256:' + mise_sha256 if mise_sha256 and mise_sha256 != 'placeholder' else omit }}"
+    - name: Mise - Run install script
+      ansible.builtin.shell: >
+        export MISE_INSTALL_PATH="{{ mise_path }}" &&
+        /tmp/mise-install.sh
+      args:
+        creates: "{{ mise_bin }}"
 
-    - name: Mise - set binary
-      ansible.builtin.set_fact:
-        mise_bin: "/home/{{ lookup('env', 'USER') }}/.local/bin/mise"
+    - name: Mise - Clean up temporary files
+      ansible.builtin.file:
+        path: "{{ cleanup_item }}"
+        state: absent
+      loop_control:
+        loop_var: cleanup_item
+      loop:
+        - "/tmp/mise-install.sh.sig"
+        - "/tmp/mise-install.sh"
 
-- name: Mise - Install/Upgrade
+- name: Mise - Install plugins
   become: true
   become_user: "{{ lookup('env', 'USER') }}"
-  when: mise_bin
   block:
-    - name: Mise - Install Plugins
+    - name: Mise - Install custom plugins
       ansible.builtin.shell: >
-        {{ mise_bin }} plugin add {{ plugin_item.plugin }} {{ plugin_item.src }}
+        {{ mise_bin }} plugin add {{ custom_plugin_item.plugin }} {{ custom_plugin_item.src }}
       args:
-        creates: "$HOME/.local/share/mise/plugins/{{ plugin_item.plugin }}"
+        creates: "$HOME/.local/share/mise/plugins/{{ custom_plugin_item.plugin }}"
       loop_control:
-        loop_var: plugin_item
+        loop_var: custom_plugin_item
       loop: "{{ sysinit_mise_custom_plugins }}"
-      when: sysinit_mise_custom_plugins && sysinit_mise_custom_plugins | length > 0
-      # Note: Using shell for mise plugins is necessary as no native Ansible
-      # module exists for mise. Input validation: plugin_item comes from
-      # controlled variable list (sysinit_mise_custom_plugins) defined in defaults/main.yml
+      when: sysinit_mise_custom_plugins is defined and sysinit_mise_custom_plugins | length > 0
 
-    - name: Mise - Install Plugins
+    - name: Mise - Install default plugins
       ansible.builtin.shell: >
         {{ mise_bin }} use -g -y {{ plugin_item }}
       args:
@@ -66,7 +86,4 @@
       loop_control:
         loop_var: plugin_item
       loop: "{{ sysinit_mise_plugins }}"
-      when: sysinit_mise_plugins and sysinit_mise_plugins | length > 0
-      # Note: Using shell for mise plugins is necessary as no native Ansible
-      # module exists for mise. Input validation: plugin_item comes from
-      # controlled variable list (sysinit_mise_plugins) defined in defaults/main.yml
+      when: sysinit_mise_plugins is defined and sysinit_mise_plugins | length > 0
