--- a/roles/sysinit/tasks/main.yml
+++ b/roles/sysinit/tasks/main.yml
@@ -1,27 +1,27 @@
 ---
-- name: System info
+- name: Display system info
   ansible.builtin.debug:
-    msg: |
-      `
-        User: "{{ ansible_user_id }}"
-        Sudo User: "{{ lookup('env', 'USER') }}"
-        System: "{{ ansible_system }}"
-        Architecture: "{{ ansible_userspace_architecture }}"
-        Distribution: "{{ ansible_distribution }}"
-        Release: "{{ ansible_distribution_release }}"
-      `
+    msg:
+      - "User: {{ ansible_user_id }}"
+      - "User Home: {{ ansible_env.HOME }}"
+      - "Sudo User: {{ lookup('env', 'USER') }}"
+      - "Sudo User: {{ ansible_env.SUDO_HOME }}"
+      - "System: {{ ansible_system }}"
+      - "Architecture: {{ ansible_userspace_architecture }}"
+      - "Distribution: {{ ansible_distribution }}"
+      - "Release: {{ ansible_distribution_release }}"
 
 - name: Load variables
   ansible.builtin.include_vars: "{{ ansible_distribution }}.yml"
 
 - name: Install system packages
   ansible.builtin.package:
-    name: "{{ packages }}"
+    name: "{{ sysinit_packages }}"
     state: present
 
-- name: Install Debian community or private matained packages
+- name: Install Debian / Ubuntu community or private packages
   ansible.builtin.include_tasks: "apt.yml"
-  loop: "{{ apt_packages | default([]) }}"
+  loop: "{{ sysinit_apt_packages | default([]) }}"
   when: ansible_distribution == 'Debian'
 
 - name: Install Arch aur packages
@@ -30,4 +30,5 @@
 
 - name: Install tools
   ansible.builtin.include_tasks: "tools/{{ item }}.yml"
-  loop: "{{ tools | default([]) }}"
+  loop: "{{ combined_tools | default([]) }}"
+  when: combined_tools is defined and combined_tools | length > 0
