--- a/roles/sysinit/tasks/tools/aws-ssm.yml
+++ b/roles/sysinit/tasks/tools/aws-ssm.yml
@@ -1,10 +1,4 @@
 ---
-- name: AWS - SSM - Exists
-  ansible.builtin.stat:
-    path: /usr/local/bin/sessionmanagerplugin
-  register: sysinit_awsssm_exists_result
-
-- name: AWS - SSM - Install/Upgrade
+- name: AWS SSM - Install or upgrade
   ansible.builtin.apt:
     deb: https://s3.amazonaws.com/session-manager-downloads/plugin/latest/ubuntu_64bit/session-manager-plugin.deb
-  when: sysinit_awsssm_exists_result.stat.exists == 'false' or upgrade == 'true'
