--- a/roles/sysinit/tasks/tools/docker.yml
+++ b/roles/sysinit/tasks/tools/docker.yml
@@ -1,22 +1,24 @@
 ---
-- name: Check for docker gpg file
+- name: Docker - Check for docker gpg file
   ansible.builtin.stat:
     path: /etc/apt/keyrings/docker.gpg
   register: docker_gpg
 
-- name: "Add docker official GPG key for {{ ansible_distribution }}"
-  ansible.builtin.apt_key:
-    url: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/gpg"
-    state: present
-    keyring: "/etc/apt/keyrings/docker.gpg"
+- name: Docker - Add GPG key
   when: not docker_gpg.stat.exists
+  block:
+    - name: "Docker - Add docker official GPG key for {{ ansible_distribution }}"
+      ansible.builtin.apt_key:
+        url: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/gpg"
+        state: present
+        keyring: "/etc/apt/keyrings/docker.gpg"
 
-- name: Fix keyring permissions
-  ansible.builtin.file:
-    path: /etc/apt/keyrings/docker.gpg
-    mode: a+r
+    - name: Docker - Fix keyring permissions
+      ansible.builtin.file:
+        path: /etc/apt/keyrings/docker.gpg
+        mode: a+r
 
-- name: Add docker repository
+- name: Docker - Add docker repository
   ansible.builtin.apt_repository:
     repo: >
       deb [arch=amd64 signed-by=/etc/apt/keyrings/docker.gpg]
@@ -39,7 +41,7 @@
     name: docker
     state: present
 
-- name: Docker - Configure user
+- name: Docker - Add user to docker group
   ansible.builtin.user:
     name: "{{ user_item }}"
     groups: docker
@@ -49,7 +51,7 @@
   loop:
     - "{{ lookup('env', 'USER') }}"
 
-- name: Docker - Install completion
+- name: Docker - Install docker completion
   block:
     - name: Docker - Get completion script content for checksum calculation
       ansible.builtin.uri:
