--- a/roles/sysinit/tasks/tools/slack.yml
+++ b/roles/sysinit/tasks/tools/slack.yml
@@ -1,14 +1,33 @@
 ---
-- name: Slack - Exists
-  ansible.builtin.stat:
-    path: /usr/local/bin/slack
-  register: slack_exists_result
+- name: Slack - Get latest version from download page
+  ansible.builtin.uri:
+    url: "https://slack.com/downloads/instructions/linux?ddl=1&build=deb"
+    method: GET
+    return_content: true
+  register: slack_download_page
 
-- name: Set slack version
+- name: Slack - Extract version number
   ansible.builtin.set_fact:
-    slack_version: 4.37.101
+    slack_version: >-
+      {{
+        slack_download_page.content
+        | regex_search('slack-desktop-([0-9]+\.[0-9]+\.[0-9]+)-amd64\.deb', '\1')
+        | first
+        | regex_replace('\n', '')
+        | trim
+        | default('4.45.64')
+      }}
 
-- name: Slack - Install/Upgrade
+- name: Slack - Download .deb package
+  ansible.builtin.get_url:
+    url: "https://downloads.slack-edge.com/desktop-releases/linux/x64/{{ slack_version }}/slack-desktop-{{ slack_version }}-amd64.deb"
+    dest: "/tmp/slack-desktop-{{ slack_version }}-amd64.deb"
+    mode: '0644'
+    timeout: 300
+    headers:
+      User-Agent: "Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36"
+
+- name: Slack - Install .deb package
   ansible.builtin.apt:
-    deb: "https://downloads.slack-edge.com/releases/linux/{{ slack_version }}/prod/x64/slack-desktop-{{ slack_version }}-amd64.deb"
-  when: slack_exists_result.stat.exists == "false" or upgrade == "true"
+    deb: "/tmp/slack-desktop-{{ slack_version }}-amd64.deb"
+    state: present
