--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -1,5 +1,7 @@
 ---
-allhosts:
-  hosts:
-    localhost:
-      ansible_connection: local
+all:
+  children:
+    sysinit:
+      hosts:
+        local-dev:
+          ansible_connection: local
