--- a/roles/sysinit/tasks/main.yml
+++ b/roles/sysinit/tasks/main.yml
@@ -10,6 +10,7 @@
       - "Architecture: {{ ansible_userspace_architecture }}"
       - "Distribution: {{ ansible_distribution }}"
       - "Release: {{ ansible_distribution_release }}"
+      - "Sysinit: {{ sysinit_var }}"
 
 - name: Load variables
   ansible.builtin.include_vars: "{{ ansible_distribution }}.yml"
